# moon-proto

./: .gitignore  CHANGELOG.md  Cargo.toml  justfile
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: app.rs  main.rs  session.rs  systems.rs  telemetry.rs
crates/cli/src/commands/: activate.rs  alias.rs  bin.rs  clean.rs  completions.rs  diagnose.rs  exec.rs  install.rs  mcp.rs  outdated.rs  pin.rs  regen.rs  run.rs  setup.rs  shell.rs  status.rs  unalias.rs  uninstall.rs  unpin.rs  upgrade.rs  versions.rs
crates/cli/src/workflows/: exec_workflow.rs  install_workflow.rs
crates/cli/tests/: status_test.rs
crates/codegen/: Cargo.toml
crates/core/: Cargo.toml
crates/core/src/: config.rs  env.rs  helpers.rs  lib.rs  loader.rs  reporter.rs  telemetry.rs  tool.rs
crates/core/src/checksum/: checksum_error.rs  minisign.rs  mod.rs  sha.rs
crates/core/src/flow/: build.rs  detect.rs  install.rs  install_error.rs  link.rs  locate.rs  manage.rs  resolve.rs
crates/core/src/layout/: bin_manager.rs  shim_registry.rs  store.rs
crates/core/tests/: bin_manager_test.rs  linker_test.rs
crates/pdk/: Cargo.toml
crates/pdk-api/: Cargo.toml
crates/pdk-test-utils/: Cargo.toml
crates/pdk-test-utils/src/: macros.rs
crates/warpgate/: Cargo.toml
crates/warpgate-api/: Cargo.toml
crates/warpgate-pdk/: Cargo.toml
crates/warpgate/src/: helpers.rs  loader.rs  loader_error.rs  plugin.rs
crates/warpgate/tests/: loader_test.rs
dev/otel/: otel-collector.yaml
e2e/tests/: 49-otel-metrics.sh
registry/data/: third-party.json
(+15 files in other folders)
