[package]
name = "proto_codegen"
version = "0.13.0"
edition = "2024"
license = "MIT"
publish = false

[package.metadata.dist]
dist = false

[dependencies]
proto_core = { version = "0.58.0", path = "../core" }
proto_pdk_api = { version = "0.31.13", path = "../pdk-api", features = [
	"schematic",
] }
schematic = { workspace = true, features = [
	"schema",
	"renderer_json_schema",
	"renderer_typescript",
] }
serde_json = { workspace = true }
